# Moteur-de-jeux

./: .gitignore  README.md
code/: CMakeLists.txt
code/common/: entity.cpp  entity.hpp  heightmap.cpp  heightmap.hpp  mesh.cpp  mesh.hpp  objloader.cpp  objloader.hpp  quaternion_utils.cpp  quaternion_utils.hpp  shader.cpp  shader.hpp  tangentspace.cpp  tangentspace.hpp  text2D.cpp  text2D.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  vboindexer.cpp  vboindexer.hpp
code/main/: imgui.ini  main  main.cpp
code/main/Actor/: Actor.cpp  Actor.hpp  ObjController.cpp  ObjController.hpp
code/main/Camera/: Camera.cpp  Camera.hpp  Camera_Helper.cpp  Camera_Helper.hpp
code/main/shaders/: fragment_shader.glsl  main_program.vs
code/src/actor/: actor.cpp  actor.hpp  objcontroller.cpp  objcontroller.hpp
code/src/camera/: camera.cpp  camera.hpp  camerahelper.cpp  camerahelper.hpp  skybox.cpp  skybox.hpp
code/src/common/: control.cpp  control.hpp  jc_voronoi_clip.h  mesh.cpp  mesh.hpp  objloader.cpp  objloader.hpp  quaternion_utils.cpp  shader.cpp  shader.hpp  texture.cpp  vboindexer.cpp
code/src/entity/: destructibleEntity.cpp  destructibleEntity.hpp  entity.cpp  entity.hpp  fractureGenerator.cpp  fractureGenerator.hpp  heightmap.cpp  heightmap.hpp  player.cpp  player.hpp  scene.cpp  scene.hpp
code/src/physics/: physicworld.cpp  physicworld.hpp  transform.cpp  transform.hpp
code/src/shaders/: fragment_shader.glsl  main_program.fs  vertex_shader.glsl
présentation/présentation/: presentation-moteur-de-jeux-beldjilali-maxime-caro-thomas.odp
